# include_tree

./: CMakeLists.txt  README.md  actions.cpp  actions.h  centralwidget.cpp  centralwidget.h  collect.cpp  collect.h  compilationunits.h  detailpanel.cpp  detailpanel.h  filltreemodel.cpp  filltreemodel.h  iactions.h  iselectcu.h  main.cpp  maincontainer.cpp  maincontainer.h  mainwindow.cpp  mainwindow.h  modelcu.cpp  modelcu.h  overviewpanel.cpp  overviewpanel.h  parsepreprocessed.cpp  parsepreprocessed.h  plaintextedit.cpp  plaintextedit.h  resources.qrc  tableviewcompilationunits.cpp  tableviewcompilationunits.h  tableviewheaders.cpp  tableviewheaders.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  treepanel.cpp  treepanel.h  treeview.h
instantiate_widgets/: CMakeLists.txt  main_centralwidget.cpp  main_detailpanel.cpp  main_treepanel.cpp
